--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 
   "dependencies": {
     "ws": "0.4.30",
-    "express": "3.3.8"
+    "express": "3.3.8",
+    "db-mysql": "0.7.6"
   },
   "devDependencies": {},
   "bundleDependencies": [],
